--- a/package.json
+++ b/package.json
@@ -3,15 +3,25 @@
   "version": "0.0.0",
   "main": "server/app.js",
   "dependencies": {
-    "sequelize": "^2.0.6",
+    "array-flatten": "^1.1.1",
     "body-parser": "^1.9.2",
     "chai": "^1.9.1",
+    "content-type": "^1.0.1",
+    "debug": "^2.2.0",
     "express": "^4.10.1",
+    "finalhandler": "^0.4.0",
     "lodash": "^2.4.1",
+    "merge-descriptors": "^1.0.0",
+    "methods": "^1.1.1",
     "mocha": "^1.21.4",
     "morgan": "^1.4.1",
-    "mysql": "^2.4.2",
-    "request": "^2.40.0"
+    "mysql": "^2.9.0",
+    "parseurl": "^1.3.0",
+    "path-to-regexp": "^1.2.1",
+    "qs": "^5.1.0",
+    "request": "^2.61.0",
+    "sequelize": "^2.1.3",
+    "utils-merge": "^1.0.0"
   },
   "scripts": {
     "start": "node ./server/app.js",
